tests/functional/lang/eval-fail-call-primop.err.exp
error:
       … while calling the 'length' builtin

         at /pwd/lang/eval-fail-call-primop.nix:1:1:

            1| builtins.length 1
             | ^
            2|

       … while evaluating the first argument passed to builtins.length

       error: value is an integer while a list was expected
